# tiger-haskell

./: .gitignore  LICENSE  README.md  bitbucket-pipelines.yml  stack.yaml  tiger-interpreter.cabal
app/: Main.hs
astprinter/: Main.hs
debugparse/: Main.hs
src/: Ast.hs  Parse.hs
src/Ast/: Folder.hs  PrettyPrinter.hs
src/Parse/: Lexer.hs  ParseTh.hs  PostFix.hs  TParser.hs  TokenTH.hs  Tokens.hs
src/Parse/Lexer/: Comment.hs  Eol.hs  Error.hs  Identifier.hs  Integer.hs  MkTok.hs  Space.hs  String.hs  Types.hs
src/Parse/Tokens/: Instance.hs
src/Types/: Ast.hs
src/Utils/: Annotations.hs
test/: Test.hs  TestParser.hs
