name:                tiger-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/PolyB/tiger-interpreter
license:             BSD3
license-file:        LICENSE
author:              Adrien Stalain
maintainer:          adrien.stalain@epita.fr
copyright:           2017 Adrien Stalain
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast
                      ,Ast.PrettyPrinter
                      ,Parse
                      ,Parse.Lexer
                      ,Parse.Tokens
                      ,Parse.TParser
                      ,Parse.Lexer.Comment
                      ,Parse.Lexer.Eol
                      ,Parse.Lexer.Error
                      ,Parse.Lexer.Identifier
                      ,Parse.Lexer.Integer
                      ,Parse.Lexer.MkTok
                      ,Parse.Lexer.Space
                      ,Parse.Lexer.String
                      ,Parse.Lexer.Types
                      ,Parse.ParseTh
                      ,Parse.PostFix
                      ,Parse.Tokens.Instance
                      ,Utils.Annotations

  build-depends:       base >= 4.7 && < 5
                      ,bytestring
                      ,parsec
                      ,template-haskell
                      ,ghc-prim
                      ,deriving-compat
                      ,recursion-schemes
                      ,free
  default-language:    Haskell2010
  ghc-options:         -Wall

executable tiger-interpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiger-interpreter
                     , parsec 
                     , bytestring
                      ,recursion-schemes
  default-language:    Haskell2010

executable tiger-parse-debug
  hs-source-dirs:      debugparse
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiger-interpreter
                     , parsec 
                     , bytestring
                      ,recursion-schemes
  default-language:    Haskell2010

executable tiger-astprinter
  hs-source-dirs:      astprinter
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiger-interpreter
                     , parsec 
                     , bytestring
                      ,recursion-schemes
  default-language:    Haskell2010

executable release
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2 -static -optc-static -optl-pthread 
  build-depends:       base
                     , tiger-interpreter
                     , parsec 
                      ,recursion-schemes
                     , bytestring
  default-language:    Haskell2010

test-suite tiger-interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       TestParser
  build-depends:       base
                     , tiger-interpreter
                     , QuickCheck
                     , parsec
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/PolyB/tiger-interpreter
